--- a/html/projet.html
+++ b/html/projet.html
@@ -37,6 +37,11 @@
     </ul>
     </nav>  -->
     </section>
+    <section>
+        <h1>
+            teest
+        </h1> <p>testyy</p>
+    </section>
 </header>  
 </body>
 </html>
