--- a/html/projet.html
+++ b/html/projet.html
@@ -11,37 +11,20 @@
 <body>
 <header>
 <section class="navbar">
-    <div  class="navbar_logo">       
-        <h1 class="WNBA">WNBA</h1> 
+    <div  class="navbar_logo"> 
+    <img src="/res/wnba_logo1.jpg" alt="wnba_logo1" >     
+        <!-- <h1 class="WNBA">WNBA</h1>  -->
         </div>
     <nav class="style-4">
 		<ul class="menu-4">
 		  <li class="current"><a href="#" data-hover="Home">Home</a></li>
-		  <li><a href="#" data-hover="About Us">About Us</a></li>
-		  <li><a href="#" data-hover="Blog">Blog</a></li>
-		  <li><a href="#" data-hover="Services">Services</a></li>
-		  <li><a href="#" data-hover="Products">Products</a></li>
-		  <li><a href="#" data-hover="Contact">Contact</a></li>
+		  <li><a href="#" data-hover="Teams">Teams</a></li>
+		  <li><a href="#" data-hover="Stats">Stats</a></li>
+		  <li><a href="#" data-hover="Best of">Best of</a></li>
+		  <li><a href="#" data-hover="My profile">My profile</a></li>
 		</ul>
 	</nav>
-    <!-- <div  class="navbar_logo">       
-    <h1 class="WNBA">WNBA</h1> 
-    </div>
-    <nav class="linksnav">
-    <ul class="nav_links">
-        <li ><a class="dropdown">Home</a></li>
-        <li ><a class="dropdown">Teams</a></li>
-        <li ><a class="dropdown">Stats</a></li>
-        <li ><a class="dropdown">Best of</a></li>
-        <li ><a class="dropdown">My profile</a></li>
-    </ul>
-    </nav>  -->
-    </section>
-    <section>
-        <h1>
-            teest
-        </h1> <p>testyy</p>
-    </section>
+</section>
 </header>  
 </body>
 </html>
