--- a/html/stats.html
+++ b/html/stats.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header>
-        <section class="navbar">
-            <div  class="navbar_logo"> 
-            <img src="/res/wnba_logo1.jpg" alt="wnba_logo1" >     
-                <!-- <h1 class="WNBA">WNBA</h1>  -->
-                </div>
-            <nav class="style-4">
-                <ul class="menu-4">
-                  <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
-                  <li><a href="#" data-hover="Teams">Teams</a></li>
-                  <li><a href="stats.html" data-hover="Stats">Stats</a></li>
-                  <li><a href="bestof.html" data-hover="Best of">Best of</a></li>
-                  <li><a href="#" data-hover="My profile">My profile</a></li>
-                </ul>
-            </nav>
-        </section>
+      <section class="navbar">
+        <div  class="navbar_logo"> 
+        <img src="/res/wnba_logo1.jpg" alt="wnba_logo1" >     
+            <!-- <h1 class="WNBA">WNBA</h1>  -->
+            </div>
+        <nav class="style-4">
+            <ul class="menu-4">
+              <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
+              <li><a href="#" data-hover="Teams">Teams</a></li>
+              <li><a href="stats.html" data-hover="Stats">Stats</a></li>
+              <li><a href="bestof.html" data-hover="News">News</a></li>
+              <li><a href="Myprofile.html" data-hover="My profile">My profile</a></li>
+            </ul>
+        </nav>
+    </section>
         </header>
 
 <section id="stats.html">
