--- a/html/home.html
+++ b/html/home.html
@@ -9,20 +9,34 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-    <section class="navbar">
+  <section class="navbar">
     <div  class="navbar_logo"> 
     <img src="/res/wnba_logo1.jpg" alt="wnba_logo1" >     
         <!-- <h1 class="WNBA">WNBA</h1>  -->
         </div>
     <nav class="style-4">
-		<ul class="menu-4">
-		  <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
-		  <li><a href="#" data-hover="Teams">Teams</a></li>
-		  <li><a href="stats.html" data-hover="Stats">Stats</a></li>
-		  <li><a href="bestof.html" data-hover="Best of">Best of</a></li>
-		  <li><a href="#" data-hover="My profile">My profile</a></li>
-		</ul>
-	</nav>
+        <ul class="menu-4">
+          <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
+          <li><a href="#" data-hover="Teams">Teams</a></li>
+          <li><a href="stats.html" data-hover="Stats">Stats</a></li>
+          <li><a href="bestof.html" data-hover="News">News</a></li>
+          <li><a href="Myprofile.html" data-hover="My profile">My profile</a></li>
+        </ul>
+    </nav>
+</section>    <section class="navbar">
+  <div  class="navbar_logo"> 
+  <img src="/res/wnba_logo1.jpg" alt="wnba_logo1" >     
+      <!-- <h1 class="WNBA">WNBA</h1>  -->
+      </div>
+  <nav class="style-4">
+      <ul class="menu-4">
+        <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
+        <li><a href="#" data-hover="Teams">Teams</a></li>
+        <li><a href="stats.html" data-hover="Stats">Stats</a></li>
+        <li><a href="bestof.html" data-hover="News">News</a></li>
+        <li><a href="Myprofile.html" data-hover="My profile">My profile</a></li>
+      </ul>
+  </nav>
 </section>
 </header>
 <section class="slides" id="home">
