finished my profile

--- a/html/bestof.html
+++ b/html/bestof.html
@@ -19,7 +19,7 @@
             <nav class="style-4">
                 <ul class="menu-4">
                   <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
-                  <li><a href="#" data-hover="Teams">Teams</a></li>
+                  <li><a href="teams.html" data-hover="Teams">Teams</a></li>
                   <li><a href="stats.html" data-hover="Stats">Stats</a></li>
                   <li><a href="bestof.html" data-hover="News">News</a></li>
                   <li><a href="Myprofile.html" data-hover="My profile">My profile</a></li>
