--- a/html/projet.html
+++ b/html/projet.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/projet.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -20,7 +20,7 @@
     <nav class="style-4">
 		<ul class="menu-4">
 		  <li class="current"><a href="home.html" data-hover="Home">Home</a></li>
-		  <li><a href="#" data-hover="Teams">Teams</a></li>
+		  <li><a href="teams.html" data-hover="Teams">Teams</a></li>
 		  <li><a href="stats.html" data-hover="Stats">Stats</a></li>
 		  <li><a href="bestof.html" data-hover="News">News</a></li>
 		  <li><a href="Myprofile.html" data-hover="My profile">My profile</a></li>
