--- a/html/teams.html
+++ b/html/teams.html
@@ -26,5 +26,40 @@
             </nav>
         </section>
         </header>
+<section class="grid_teams">
+    <ul class="grid-container">
+        <li class="team_name"><a href="Dallas.html">
+            <div class="classdiv">
+                Dallas Wings
+            </div>
+        </a></li>
+        <li class="team_name"><a href="LasVegas.html">
+            <div class="classdiv">
+                Les Vegas Aces
+            </div>
+        </a></li> 
+         <li class="team_name"><a href="LosAngelesSparks.html">
+            <div class="classdiv">
+                Los angeles soarks
+            </div>
+        </a></li>  
+        <li class="team_name"><a href="SeatleStorm.html">
+            <div class="classdiv">
+                seatle storm
+            </div>
+        </a></li> 
+         <li class="Atlanta_Dream"><a href="WashingtonMystics.html">
+            <div class="classdiv">
+                Washington Mystics
+            </div>
+        </a></li>
+        <li class="Atlanta_Dream"><a href="PhoenixMercury.html">
+            <div class="classdiv">
+                Phoenix Mercury
+            </div>
+        </a></li>
+      
+    </ul>
+</section>
 </body>
 </html>
