--- a/html/home.html
+++ b/html/home.html
@@ -151,7 +151,14 @@
     </a> 
   </div>
 </section>
-
+<footer class="footer">
+  <div class="contenu_footer">
+      <div class="text2_footer">
+    </div>
+    <p>This site uses cookies to deliver services in accordance with this Privacy Policy. You can specify the conditions for storing or accessing cookies on your browser.</p>
+    www.WomenNBA.com © 2021
+  </div>
+  </footer>
   
 </body>
 </html>
