--- a/html/teams.html
+++ b/html/teams.html
@@ -26,40 +26,29 @@
             </nav>
         </section>
         </header>
-<section class="grid_teams">
-    <ul class="grid-container">
-        <li class="team_name"><a href="Dallas.html">
-            <div class="classdiv">
-                Dallas Wings
-            </div>
-        </a></li>
-        <li class="team_name"><a href="LasVegas.html">
-            <div class="classdiv">
-                Les Vegas Aces
-            </div>
-        </a></li> 
-         <li class="team_name"><a href="LosAngelesSparks.html">
-            <div class="classdiv">
-                Los angeles soarks
-            </div>
-        </a></li>  
-        <li class="team_name"><a href="SeatleStorm.html">
-            <div class="classdiv">
-                seatle storm
-            </div>
-        </a></li> 
-         <li class="Atlanta_Dream"><a href="WashingtonMystics.html">
-            <div class="classdiv">
-                Washington Mystics
-            </div>
-        </a></li>
-        <li class="Atlanta_Dream"><a href="PhoenixMercury.html">
-            <div class="classdiv">
-                Phoenix Mercury
-            </div>
-        </a></li>
-      
-    </ul>
-</section>
+        <section class="grid_teams">
+            <div class="classdiv"><a href="Dallas.html">
+            <h1 class="naaame">Dallas Wings</h1>
+            </div></a>
+            <div class="classdiv"><a href="Dallas.html">
+            <h1 class="naaame">Dallas Wings</h1>
+            </div></a>
+            <div class="classdiv"><a href="LasVegas.html">
+            <h1 class="naaame"> Les Vegas Aces</h1>
+            </div></a>
+            <div class="classdiv" ><a href="LosAngelesSparks.html">
+            <h1 class="naaame">Los angeles soarks</h1>
+            </div>  </a>
+            <div class="classdiv"><a href="SeatleStorm.html">
+            <h1 class="naaame">seatle storm</h1>
+            </div></a>
+            <div class="classdiv"><a href="WashingtonMystics.html">
+            <h1 class="naaame"> Washington Mystics</h1>
+            </div></a>
+            <div class="classdiv"><a href="PhoenixMercury.html">
+            <h1 class="naaame">Phoenix Mercury </h1>
+            </div></a>
+            
+            </section>
 </body>
 </html>
