--- a/html/Myprofile.html
+++ b/html/Myprofile.html
@@ -26,6 +26,7 @@
             </ul>
         </nav>
     </section>
+
     <section class="signin">
 
         <div class="container" id="container">
@@ -68,7 +69,7 @@
         </div>
         
     </section>
-    <section>
+    <section class="quiz">
         <h2 class="quizHeader">Let's Take a Quiz!</h2>
   
         <table style="width:583px">
